--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
-    "discord.js": "^13.8.1"
-  }
+    "discord.js": "^13.8.1",
+    "fs": "^0.0.1-security"
+  },
+  "name": "the_murder",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Murdersesport/the_murder.git"
+  },
+  "author": "Oussama",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Murdersesport/the_murder/issues"
+  },
+  "homepage": "https://github.com/Murdersesport/the_murder#readme",
+  "description": ""
 }
