--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^13.8.1",
+    "dotenv": "^16.0.1",
     "fs": "^0.0.1-security"
   },
   "name": "the_murder",
