--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
     "fs": "^0.0.1-security"
